# deep-ml-cpp

./: CMakeLists.txt  README.md
easy/: accuracy_score.cpp  calculate_matrix_mean.cpp  feature_scaling.cpp  leaky_relu.cpp  linear_kernel.cpp  linear_regression_using_gradient_descent.cpp  linear_regression_using_normal_equation.cpp  log_softmax.cpp  matrix_dot_vector.cpp  precision_metric.cpp  relu.cpp  reshape.cpp  ridge_loss.cpp  scalar_multiply.cpp  sigmoid.cpp  single_neuron.cpp  softmax.cpp  transform_basis.cpp  transpose.cpp  vector_to_diagongal_matrix.cpp
hard/: determinant_4_by_4.cpp  svd.cpp  svd.h
medium/: calculate_2_by_2_matrix_inverse.cpp  calculate_covariance_matrix.cpp  calculate_eigenvalues.cpp  jacobi_method.cpp  matmul.cpp  matrix_transformation.cpp
tests/: test_easy.cpp  test_easy.h  test_hard.cpp  test_hard.h  test_medium.cpp  test_medium.h  test_utils.h
